--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^1.0",
         "hardevine/shoppingcart": "^2.5",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-permission": "^2.29"
+        "spatie/laravel-cors": "^1.6",
+        "spatie/laravel-permission": "^2.29",
+        "barryvdh/laravel-cors": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
