--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-cors": "^1.0",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "~6.0",
         "hardevine/shoppingcart": "^2.5",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
         "spatie/laravel-cors": "^1.6",
-        "spatie/laravel-permission": "^2.29",
-        "barryvdh/laravel-cors": "^1.0"
+        "spatie/laravel-permission": "^2.29"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
